# johnnycanencrypt

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  build-wheels.sh  changelog.md  mypy.ini  pyproject.toml  requiremenst-dev.txt  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/actions/manylinux/: action.yml
.github/workflows/: ci_pr.yml  windows.yml  windows_ci.yml
changelog.d/: 20251124_115826_mail_for_next.md  20251124_120640_mail_for_next.md  20251126_221737_mail_unwrap.md  20251127_121741_mail_unwrap.md  20251129_134901_mail_pin_verify.md  20251215_084355_mail_deps_2_1_0.md  20260102_115429_mail_new_jcecard.md
ci/: config.toml
dockerfiles/: Dockerfile
docs/: api.rst  build.rst  conf.py  index.rst  introduction.rst  rustimplementation.rst  smartcard.rst
examples/: fossasia.ipynb
johnnycanencrypt/: __init__.py  exceptions.py  johnnycanencrypt.pyi  utils.py
scripts/: check-version  install-fedora
sm2/: smartcards.py  smartcards_for_primary.py
smartcardtests/: 2184DF8AF2CAFEB16357FE43E6F848F1DDC66C12.pub  2184DF8AF2CAFEB16357FE43E6F848F1DDC66C12.sec  5286C32E7C71E14C4C82F9AE0B207108925CB162.pub  5286C32E7C71E14C4C82F9AE0B207108925CB162.sec  smartcards.py  smartcards_for_primary.py
src/: lib.rs  scard.rs
tests/: conftest.py  test_encrypt_decrypt.py  test_files_missing.py  test_keystore.py  test_parse_cert.py  test_rust.py  test_sign_verify_bytes.py  test_ssh_pubkey.py  utils.py
tests/files/: double_recipient.asc  foo_keyring.asc  gpg_encrypted.asc  gpg_encrypted.txt  hellopublic.asc  hellosecret.asc  msg.txt.asc  nistp256.pub  nistp256.sec  nistp384.pub  nistp384.sec  nistp521.pub  nistp521.sec  primary_with_sign.asc  primary_with_sign_public.asc  public.asc  secret.asc  test_fetch_key_by_email.yml  test_fetch_key_by_fingerprint.yml  test_fetch_nonexistingkey_by_email.yml  test_fetch_nonexistingkey_by_fingerprint.yml  text.txt
tests/files/store/: 363F0180891AB46098F4463864AB0060FAB80A18.sec  FC3CE1AD6229F4CC89571D1CB4741BF4DDA4BA62.pub  hellosecret.asc  jce.db  kushal_updated_key.asc  old.asc  oldjce.db  pgp_keys.asc
