[package]
name = "johnnycanencrypt"
version = "0.8.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"
description = "Python module for OpenPGP."
documentation = "https://johnnycanencrypt.readthedocs.io/en/latest/index.html"
readme = "README.md"
homepage = "https://johnnycanencrypt.readthedocs.io/en/latest/introduction.html"
repository = "https://github.com/kushaldas/johnnycanencrypt"
license-file = "LICENSE"
exclude = ["examples/**/*.py", "*.patch", "smartcardtests/jce.db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "johnnycanencrypt"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]


[dependencies]
sequoia-openpgp = "1.0.0"
anyhow = "1.0.62"
chrono = "0.4.22"
tempfile = "3.0.0"
#talktosc = { git = "https://github.com/kushaldas/talktosc", branch="main"}
talktosc = "0.1.2"
 
[dependencies.pyo3]
version = "0.16.4"


[package.metadata.maturin]
classifier = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainer = "Kushal Das"
maintainer-email = "mail@kushaldas.in"
requires-python = ">=3.7"
requires-dist = ["httpx"]
[package.metadata.maturin.project-url]
Github = "https://github.com/kushaldas/johnnycanencrypt"

