[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "johnnycanencrypt"
version = "0.13.1"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = [{name="Kushal Das", email="mail@kushaldas.in"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/kushaldas/johnnycanencrypt"
"Bug Tracker" = "https://github.com/kushaldas/johnnycanencrypt/issues"
